--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nae",
   "version": "0.1.0",
-  "proxy": "http://localhost:3001",
+  "proxy": "https://24academy.ru/",
   "private": true,
   "homepage": "./",
   "dependencies": {
